@@ -1,4 +1,7 @@
 2007-12-04 Damien Douxchamps http://damien.douxchamps.net/
+	* SVN 488: reserve dc1394_ prefix for exported functions.
+	           channel/bandwidth functions still have the prefix since
+		   we plan to export them soon.
         * SVN 487: - Applied a consistant naming scheme for all functions.
 	           - Temporary (?) implementation of a DC1394_DEBUG
 		     compiler flag
